Метод массовой деактивации пользователей
